<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helloworld.activity.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <Button 
        android:id="@+id/link_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_fragment"
        />
    
    <Button 
        android:id="@+id/link_item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_item_list"
        />
    
    <Button 
        android:id="@+id/link_framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_framelayout"
        />
    
    <Button 
        android:id="@+id/link_list_height_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_list_height_change"
        />
    
    <Button 
        android:id="@+id/link_line_break"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_line_break"
        />
    
    <Button 
        android:id="@+id/link_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_async"
        />
    
    <Button 
        android:id="@+id/link_layout_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="レイアウトテスト"
        />
    
    <Button 
        android:id="@+id/link_switch_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="スイッチボタン"
        />
    
    <Button 
        android:id="@+id/link_mylistener"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="独自リスナー" />
    
    <Button 
        android:id="@+id/link_dialog_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DialogFragment" />

</LinearLayout>
