<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    android:background="@color/green"
    >

    <TextView
        android:id="@+id/textView_shopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:text="@string/shopName"/>

    <!-- ここのレイアウトの高さを変更 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/meet" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemName"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/orange" 
                android:textSize="@dimen/font_size_large"/>

            <TextView
                android:id="@+id/textView_sentence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sentence" 
                android:maxLines="2"
                android:ellipsize="end" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
